# docs/swagger.json
@@ -18,6 +18,21 @@
     "basePath": "/api/v1",
     "paths": {
         "/user": {
+            "get": {
+                "produces": [
+                    "application/json"
+                ],
+                "summary": "get all users",
+                "operationId": "get-all-users",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/user.User"
+                        }
+                    }
+                }
+            },
             "post": {
                 "produces": [
                     "application/json"
